fix alignment for add item and header

--- a/src/app/add_item/_add_item.scss
+++ b/src/app/add_item/_add_item.scss
@@ -7,6 +7,8 @@
     position: absolute;
     left: 0;
     top: 0;
+    display: flex;
+    justify-content: center;
 }
 
 @media screen and (min-width: 1000px) {
