--- a/src/app/components/header/_header.scss
+++ b/src/app/components/header/_header.scss
@@ -127,6 +127,10 @@
     width: 60%;
     display: none;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2);
+
+    @media screen and (min-width: 700px) {
+        width: 30%;
+    }
 }
 
 #search {
